# patho-sam

./: .gitignore  README.md  cellvit_environment.yaml  environment.yaml  environment_cpu_win.yaml  environment_gpu_win.yaml  hovernet_env.yaml  pyproject.toml  setup.cfg  setup.py
examples/: README.md  annotator_2d.py  annotator_2d_wsi.py  finetune_semantic.py  finetune_specialist.py  train_semantic.py  util.py
examples/finetuning/: README.md  annotator_with_finetuned_model.py  finetune_nuclick.py
experiments/: README.md
experiments/benchmarking/: README.md
experiments/data/: README.md  automatic_data.py  cnn_automatic_data.py  cvtplus_preproc.py  dataloaders.py  get_paths.py  interactive_data.py  load_datasets.py  load_original_data.py  load_padded_data.py  load_testsets.py  preprocess_datasets.py  raw_loader.py  transformer_data.py  util.py
experiments/finetuning/: README.md
experiments/histopathology/: dataloaders.py  evaluate_ais.py  evaluate_amg.py  evaluate_iterative_prompting.py  lizard.py  load_datasets.py  load_testsets.py  monusac.py  preprocess_datasets.py  puma.py  read_results.py  run_ais.py  run_amg.py  run_iter_boxes.py  run_iter_points.py  run_pannukesam_inference.py  tnbc.py  util.py
experiments/patho-sam/: README.md  evaluate_ais.py  evaluate_amg.py  evaluate_iterative_prompting.py  get_results.py  per_image_eval.py  push_inference.py  run_ais.py  (+5 more)
patho_sam/: automatic_segmentation.py  evaluation.py  semantic_segmentation.py  util.py
scripts/: test_pannuke.py
semantic_segmentation/: evaluate_pannuke.py  run_pannuke.py  train_pannuke.py
(+476 files in other folders)
