[project]
name = "patho_sam"
description = "Segment Anything for Histopathology."
authors = [{name = "Anwai Archit", email = "anwai.archit@uni-goettingen.de"}, {name = "Titus Griebel", email = "titus.griebel@stud.uni-goettingen.de"}]
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://user.informatik.uni-goettingen.de/~pape41/"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "W505"]
