[metadata]
name = patho_sam
version = 0.0.1
description = Segment Anything for Histopathology.
long_description = file: README.md
long_description_content_type = text/markdown
author = Anwai Archit, Titus Griebel
author_email = anwai.archit@uni-goettingen.de
url = https://user.informatik.uni-goettingen.de/~pape41/

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include = patho_sam

# make suire it gets included in your package
[options.package_data]
* = *.yaml
